[package]
authors = ["Eirik Albrigtsen <analsandblaster@gmail.com>"]
description = "A simple log implementation that logs to stdout and stderr with colors"
documentation = "http://clux.github.io/loggerv"
keywords = ["log", "logger", "stdio", "cli"]
license = "MIT"
name = "loggerv"
repository = "https://github.com/clux/loggerv"
version = "0.3.0"

[dependencies]
ansi_term = "0.9.0"
log = "0.3.7"

[dev-dependencies]
clap = "2.1.2"

[[example]]
name = "clap"
path = "examples/clap.rs"
