[package]
authors = ["Eirik Albrigtsen <sszynrae@gmail.com>"]
description = "A simple log implementation that logs to stdout and stderr with colors"
documentation = "http://clux.github.io/loggerv"
keywords = ["log", "logger", "stdio", "cli"]
license = "MIT"
name = "loggerv"
repository = "https://github.com/clux/loggerv"
version = "0.4.0"

[dependencies]
atty = "0.2.2"
ansi_term = "0.9.0"
log = "0.3.7"

[dev-dependencies]
clap = "2.1.2"

[[example]]
name = "clap"
path = "examples/clap.rs"

[[example]]
name = "config"
path = "examples/config.rs"
